多线程更新

--- a/C# 高级/15.多线程/多线程.md
+++ b/C# 高级/15.多线程/多线程.md
@@ -229,4 +229,84 @@ private Func<T> ThreadWithReturn<T>(Func<T> func)
 }
 ```
 
-这段代码展示了异步获取返回值的功能。
+这段代码展示了异步获取返回值的功能。Func<int> funcThread = this.ThreadWithReturn(func);代码来执行异步方法，执行期间代码可以做其他事，当程序需要用异步方法的返回值时，再通过阻塞去获取返回值。
+
+# 线程池
+
+为了避免频繁创建和销毁线程的巨大开销，.NET 提供了一个**线程池**。它是一个由 CLR (公共语言运行时) 管理的后台工作者线程集合。
+
+线程池就是线程在排队等待任务，任务完成后线程不会销毁，会继续进行排队
+
+  ThreadPool.SetMaxThreads(8, 8);//设置的最大值，必须大于CPU核数，否则设置无效
+
+  ThreadPool.SetMinThreads(2, 2);
+
+线程池设置最大线程数和最小线程数，这个设置是全局的，所有异步都会生效。
+
+```csharp
+ThreadPool.QueueUserWorkItem(o => this.DoSomethingLong("btnThreadPool_Click1"));
+```
+
+这个就是给线程池派一个任务。
+
+```csharp
+ManualResetEvent mre = new ManualResetEvent(false);
+//false---关闭---Set打开---true---WaitOne就能通过
+//true---打开--ReSet关闭---false--WaitOne就只能等待
+ThreadPool.QueueUserWorkItem(o =>
+{
+    this.DoSomethingLong("btnThreadPool_Click1");
+    mre.Set();
+});
+Console.WriteLine("Do Something else...");
+Console.WriteLine("Do Something else...");
+Console.WriteLine("Do Something else...");
+
+mre.WaitOne();
+Console.WriteLine("任务已经完成了。。。");
+```
+
+上面的代码是线程池的等待功能。
+
+# Task
+
+Task是基于线程池，然后提供了丰富的API，可以应对更多的场景。Task有Task类和TaskFactory类。
+
+
+
+```csharp
+{
+    Task task = new Task(() => this.DoSomethingLong("btnTask_Click_1"));
+    task.Start();
+}
+{
+    Task task = Task.Run(() => this.DoSomethingLong("btnTask_Click_2"));
+}
+{
+    TaskFactory taskFactory = Task.Factory;
+    Task task = taskFactory.StartNew(() => this.DoSomethingLong("btnTask_Click_3"));
+}
+TaskFactory taskFactory = new TaskFactory();
+List<Task> taskList = new List<Task>();
+taskList.Add(taskFactory.StartNew(() => this.Coding("冰封的心", "Portal")));
+taskList.Add(taskFactory.StartNew(() => this.Coding("随心随缘", "  DBA ")));
+taskList.Add(taskFactory.StartNew(() => this.Coding("心如迷醉", "Client")));
+taskList.Add(taskFactory.StartNew(() => this.Coding(" 千年虫", "BackService")));
+taskList.Add(taskFactory.StartNew(() => this.Coding("简单生活", "Wechat")));
+
+//谁第一个完成，获取一个红包奖励
+taskFactory.ContinueWhenAny(taskList.ToArray(), t => Console.WriteLine($"XXX开发完成，获取个红包奖励{Thread.CurrentThread.ManagedThreadId.ToString("00")}"));
+//实战作业完成后，一起庆祝一下
+taskList.Add(taskFactory.ContinueWhenAll(taskList.ToArray(), rArray => Console.WriteLine($"开发都完成，一起庆祝一下{Thread.CurrentThread.ManagedThreadId.ToString("00")}")));
+//ContinueWhenAny  ContinueWhenAll 非阻塞式的回调；而且使用的线程可能是新线程，也可能是刚完成任务的线程，唯一不可能是主线程
+
+
+//阻塞当前线程，等着任意一个任务完成
+Task.WaitAny(taskList.ToArray());//也可以限时等待
+Console.WriteLine("Eleven准备环境开始部署");
+//需要能够等待全部线程完成任务再继续  阻塞当前线程，等着全部任务完成
+Task.WaitAll(taskList.ToArray());
+Console.WriteLine("5个模块全部完成后，Eleven集中点评");
+```
+
+这段代码是创建了5个线程并发执行，当任意一个线程完成后，执行程序，当所有线程完成后，执行另一段程序，taskFactory的ContinueWhenAny  ContinueWhenAll是非阻塞式的，Task.WaitAny Task.WaitAll是阻塞了当前进程。
