--- a/C# 高级/15.多线程/多线程.md
+++ b/C# 高级/15.多线程/多线程.md
@@ -272,7 +272,16 @@ Console.WriteLine("任务已经完成了。。。");
 
 Task是基于线程池，然后提供了丰富的API，可以应对更多的场景。Task有Task类和TaskFactory类。
 
+Task的线程等待有下面几种方式：
 
+- Wait：针对单个Task的实例，可以task1.wait进行线程等待
+- WaitAny：线程列表中任何一个线程执行完毕即可执行（阻塞主线程）
+- WaitAll：线程列表中所有线程执行完毕方可执行（阻塞主线程）
+- WhenAny：与ContinueWith配合,线程列表中任何一个执行完毕，则继续ContinueWith中的任务（开启新线程，不阻塞主线程）
+- WhenAll：与ContinueWith配合,线程列表中所有线程执行完毕，则继续ContinueWith中的任务（开启新线程，不阻塞主线程）
+- ContinueWith：与WhenAny或WhenAll配合使用
+- ContinueWhenAny：等价于Task的WhenAny+ContinueWith
+- ContinueWhenAll：等价于Task的WhenAll+ContinueWith
 
 ```csharp
 {
@@ -310,3 +319,137 @@ Console.WriteLine("5个模块全部完成后，Eleven集中点评");
 ```
 
 这段代码是创建了5个线程并发执行，当任意一个线程完成后，执行程序，当所有线程完成后，执行另一段程序，taskFactory的ContinueWhenAny  ContinueWhenAll是非阻塞式的，Task.WaitAny Task.WaitAll是阻塞了当前进程。
+
+# Parallel
+
+parallel是一种并发异步执行的类。
+
+```csharp
+Parallel.Invoke(() => this.DoSomethingLong("btnParallel_Click_1"),
+    () => this.DoSomethingLong("btnParallel_Click_2"),
+    () => this.DoSomethingLong("btnParallel_Click_3"),
+    () => this.DoSomethingLong("btnParallel_Click_4"),
+    () => this.DoSomethingLong("btnParallel_Click_5"));
+```
+
+这段代码就是并发执行5个方法。
+
+# 多线程其他应用
+
+## 多线程异常
+
+```csharp
+try
+{
+
+    List<Task> taskList = new List<Task>();
+    for (int i = 0; i < 100; i++)
+    {
+        string name = $"btnThreadCore_Click_{i}";
+        taskList.Add(Task.Run(() =>
+        {
+            if (name.Equals("btnThreadCore_Click_11"))
+            {
+                throw new Exception("btnThreadCore_Click_11异常");
+            }
+            else if (name.Equals("btnThreadCore_Click_12"))
+            {
+                throw new Exception("btnThreadCore_Click_12异常");
+            }
+            else if (name.Equals("btnThreadCore_Click_38"))
+            {
+                throw new Exception("btnThreadCore_Click_38异常");
+            }
+            Console.WriteLine($"This is {name}成功 ThreadId={Thread.CurrentThread.ManagedThreadId.ToString("00")}");
+        }));
+    }
+    //多线程里面抛出的异常，会终结当前线程；但是不会影响别的线程；
+    //那线程异常哪里去了？ 被吞了，
+    //假如我想获取异常信息，还需要通知别的线程
+    Task.WaitAll(taskList.ToArray());//1 可以捕获到线程的异常
+}
+catch (AggregateException aex)//2 需要try-catch-AggregateException
+{
+    foreach (var exception in aex.InnerExceptions)
+    {
+        Console.WriteLine(exception.Message);
+    }
+}
+catch (Exception ex)//可以多catch  先具体再全部
+{
+    Console.WriteLine(ex);
+}
+```
+
+若是想捕获多线程异常，可以使用多线程专用异常类：AggregateException ，并循环获得每个异常的信息。
+
+常规做法是将try catch放在线程内部，也就是Task.Run()里。
+
+## 线程取消
+
+多线程并发任务，某个线程失败后，希望把后面的线程都停下来，CancellationTokenSource类可以实现。
+
+```csharp
+for (int i = 0; i < 50; i++)
+{
+    string name = $"btnThreadCore_Click_{i}";
+    taskList.Add(Task.Run(() =>
+    {
+        try
+        {
+            if (!cts.IsCancellationRequested)
+                Console.WriteLine($"This is {name} 开始 ThreadId={Thread.CurrentThread.ManagedThreadId.ToString("00")}");
+
+            Thread.Sleep(new Random().Next(50, 100));
+
+            if (name.Equals("btnThreadCore_Click_11"))
+            {
+                throw new Exception("btnThreadCore_Click_11异常");
+            }
+            else if (name.Equals("btnThreadCore_Click_12"))
+            {
+                throw new Exception("btnThreadCore_Click_12异常");
+            }
+            else if (name.Equals("btnThreadCore_Click_13"))
+            {
+                cts.Cancel();
+            }
+            if (!cts.IsCancellationRequested)
+            {
+                Console.WriteLine($"This is {name}成功结束 ThreadId={Thread.CurrentThread.ManagedThreadId.ToString("00")}");
+            }
+            else
+            {
+                Console.WriteLine($"This is {name}中途停止 ThreadId={Thread.CurrentThread.ManagedThreadId.ToString("00")}");
+                return;
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+            cts.Cancel();
+        }
+    }, cts.Token));
+}
+```
+
+线程内遇到异常时，需要设置cts.Cancel();后续的线程就会取消，取消的操作会有延迟，无法保证具体到某个线程取消。
+
+## 临时变量
+
+```csharp
+for (int i = 0; i < 5; i++)
+{
+    int k = i;
+    Task.Run(() =>
+    {
+        Console.WriteLine($"This is btnThreadCore_Click_{i}_{k} ThreadId={Thread.CurrentThread.ManagedThreadId.ToString("00")}");
+    });
+}
+```
+
+可以看看上面的代码，运行结果如下：
+
+![img](https://cdn.nlark.com/yuque/0/2026/png/42432244/1768919295139-46794ee8-3cdd-485b-a7e9-213f2735c351.png)
+
+可以看到这五个输出的i都是5，为什么会这样？因为线程是非阻塞的，延迟启动的，当线程执行的时候，i已经是5了，而k是闭包的，每个循环是独立的。
