工作流项目增加代码

--- a/工作流系统/文档/2.业务框架设计.md
+++ b/工作流系统/文档/2.业务框架设计.md
@@ -24,7 +24,7 @@
 
 业务框架主要涉及要后端框架。
 
-#### 2.1通用结果
+## 2.1通用结果
 
 把WebAPI Controller里Action产生的结果，封装起来。
 
@@ -134,4 +134,129 @@ builder.Services.AddControllers(options =>
 
 绝大部分返回值类型都是ObjectResult，如果是其他的，如JsonResult，EmptyResult就要单独设置。
 
-2.2 
+## 2.2 通用异常
+
+```plain
+public class CommonException : Exception
+{
+    public string ErrorNo { get; set; } // 异常编号
+    public string ErrorInfo { get; set; }  // 抽象 message
+}
+```
+
+定义这个异常类后，对异常需要定义异常类，并将报错信息赋值给它并抛出，如果要通用异常。
+
+```plain
+[HttpGet("GetImplementedException")]
+public void GetImplementedException()
+{
+    CommonException exception = new()
+    {
+        ErrorNo = "1",
+        ErrorInfo = "这是一个已实现的异常示例"
+    };
+    throw exception;
+}
+/// <summary>
+/// 通用异常包装
+/// </summary>
+public class CommonExceptionFilter : IExceptionFilter
+{
+    /// <summary>
+    /// 1、实现通用异常包装
+    /// </summary>
+    /// <param name="context"></param>
+    /// <exception cref="NotImplementedException"></exception>
+    public void OnException(ExceptionContext context)
+    {
+        // 1、获取异常
+        Exception exception = context.Exception;
+
+        // 1.1、异常判断
+        if (exception is CommonException common)
+        {
+            // 1.1.1、通用异常结果包装
+            CommonExceptionResult commonExceptionResult = new CommonExceptionResult();
+            commonExceptionResult.ErrorNo = common.ErrorNo;
+            commonExceptionResult.ErrorInfo = common.ErrorInfo;
+            commonExceptionResult.ErrorReason = common.StackTrace;
+
+            // 1.1.2、通用异常结果返回
+            context.Result = new JsonResult(commonExceptionResult);
+        }
+        else
+        {
+            // 2、异常包装
+            CommonException commonException = new CommonException();
+            commonException.ErrorNo = "-1"; // 异常状态
+            commonException.ErrorInfo = exception.Message;
+            //commonException.ErrorReason = exception.StackTrace;
+
+            // 3、异常包装返回
+            context.Exception = commonException;
+
+            // 4、通用异常结果包装
+            CommonExceptionResult commonExceptionResult = new CommonExceptionResult();
+            commonExceptionResult.ErrorNo = commonException.ErrorNo;
+            commonExceptionResult.ErrorInfo = commonException.ErrorInfo;
+            commonExceptionResult.ErrorReason = commonException.StackTrace;
+
+            // 5、通用异常结果返回
+            context.Result = new JsonResult(commonExceptionResult);
+        }
+
+    }
+}
+builder.Services.AddControllers(options =>
+{
+    // 1、配置CommonResultFilter
+    options.Filters.Add<CommonResultFilter>();
+    // 2、配置CommonExceptionFilter
+    options.Filters.Add<CommonExceptionFilter>();
+});
+```
+
+配置了之后，每个异常都会去执行CommonExceptionFilter类并返回CommonExceptionResult（异常结果类）。
+
+## 2.3 通用Controller
+
+把WebAPI Controller封装起来。用户封装所有控制器中相同的依赖。
+
+```plain
+/// <summary>
+/// 通用控制器
+/// </summary>
+public abstract class CommonController<T> : ControllerBase
+{
+    protected ILogger<T> _logger { get; }
+
+    public CommonController(ILogger<T> logger)
+    {
+        _logger = logger;
+    }
+}
+```
+
+在控制器中继承通用控制器，就能够使用_logger属性。
+
+## 2.4 通用Json
+
+默认的Json转换会改变字段的大小写，通用Json把WebAPI Controller Action产生的结果，全部转化为模型字段定义的格式。
+
+写法即在Program里加上代码：
+
+```plain
+builder.Services.AddControllers(options =>
+{
+    // 1、配置CommonResultFilter
+    options.Filters.Add<CommonResultFilter>();
+    // 2、配置CommonExceptionFilter
+    options.Filters.Add<CommonExceptionFilter>();
+}).AddJsonOptions(options =>
+{
+    // 3、配置通用Json格式
+    options.JsonSerializerOptions.PropertyNamingPolicy = null;
+});
+```
+
+## 2.5 通用模块
