工作流项目更新

--- a/工作流系统/文档/2.业务框架设计.md
+++ b/工作流系统/文档/2.业务框架设计.md
@@ -260,3 +260,50 @@ builder.Services.AddControllers(options =>
 ```
 
 ## 2.5 通用模块
+
+对CommonControllers、CommonExceptions、CommonResults子模块封装。由于给当前项目使用。所以，叫做通用模块。
+
+将配置项单独存放在一个类里面。
+
+```plain
+public static class CommonControllersServiceCollectionExtensions
+{
+    /// <summary>
+    /// 1、实现CommonController模块
+    /// </summary>
+    /// <param name="services"></param>
+    /// <returns></returns>
+    public static IServiceCollection AddCommonControllers(this IServiceCollection services)
+    {
+        services.AddControllers(options => {
+            // 1、配置CommonResultFilter
+            options.Filters.Add<CommonResultFilter>();
+            // 2、配置CommonExceptionFilter
+            options.Filters.Add<CommonExceptionFilter>();
+        }).AddJsonOptions(options => {
+            // 3、配置通用Json格式
+            options.JsonSerializerOptions.PropertyNamingPolicy = null;
+        });
+
+        return services;
+    }
+}
+```
+
+然后Program.cs换成这个模块：
+
+```plain
+builder.Services.AddCommonControllers();
+```
+
+2.6 通用项目模块
+
+创建项目：Workflow_CommonController
+
+![img](https://cdn.nlark.com/yuque/0/2026/png/42432244/1770469167458-6f07d736-55fd-49fc-b3ac-7c89a4d63bae.png)
+
+将通用的Common文件夹剪切到Workflow_CommonController项目下面，Workflow_Back项目引用Workflow_CommonController。便可实现模块的通用。
+
+![img](https://cdn.nlark.com/yuque/0/2026/png/42432244/1770469210632-21ac2d20-b7bb-4376-9048-60a59a4144d1.png)
+
+新建项目Workflow_Login，引用Workflow_CommonController，并在Program加上builder.Services.AddCommonControllers();
